# yarstack

./: .gitattributes  .gitignore  README
deploy/: ansible.cfg  apps.yml  emp.yml  geekbench.yml  generate.py  github.yml  hosts.ini
deploy/app/: watcher.service.j2  worker.service.j2
deploy/filter_plugins/: list_slice.py
deploy/roles/ansible/tasks/: main.yml
deploy/roles/app/defaults/: main.yml
deploy/roles/app/tasks/: main.yml
deploy/roles/app/templates/: app.service.j2  env.j2
deploy/roles/base/tasks/: main.yml
deploy/roles/better_roles/: README.md
deploy/roles/better_roles/defaults/: main.yml
deploy/roles/better_roles/tasks/: main.yml  role-exec.yml
deploy/roles/btop/defaults/: main.yml
deploy/roles/btop/tasks/: main.yml
deploy/roles/gogs/defaults/: main.yml
deploy/roles/gogs/tasks/: main.yml
deploy/roles/gogs/templates/: gogs.ini.j2  gogs.service.j2
deploy/roles/hetzner/defaults/: main.yml
deploy/roles/hetzner/tasks/: main.yml
deploy/roles/hetzner/templates/: hosts.ini.j2
deploy/roles/namecheap/defaults/: main.yml
deploy/roles/namecheap/tasks/: main.yml
deploy/roles/nginx/defaults/: main.yml
deploy/roles/nginx/tasks/: main.yml
deploy/roles/nginx/templates/: app.conf.j2  certbot.conf.j2  nginx.service.j2  server.conf.j2
deploy/roles/node/defaults/: main.yml
deploy/roles/node/tasks/: main.yml
deploy/roles/postgresql/defaults/: main.yml
deploy/roles/postgresql/tasks/: main.yml
deploy/roles/python/defaults/: main.yml
project/: cli.py  pyproject.toml
project/project/: __init__.py
project/tests/: test_app.py
(+11 files in other folders)
